gpu: Forbid binding one buffer to two transform feedback outputs

Implementing a WebGL spec change:
https://github.com/KhronosGroup/WebGL/pull/2658
Fixes WebGL 2 conformance test:
conformance2/transform_feedback/same-buffer-two-binding-points.html

We want to forbid this for all GL contexts, not just WebGL ones, because
it is also forbidden by DirectX, so ANGLE can't efficiently implement
it.

Bug: 866089
Change-Id: Ibf57adf513eca05b46b93d2139ba038d488c9cc9
Reviewed-on: https://chromium-review.googlesource.com/c/1346994
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: James Darpinian <jdarpinian@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611468}
Former-commit-id: 75ece1742b60bcca5e1dfb28a7bb16b4496b97bc